# resma

./: .coveragerc  .dockerignore  .gitignore  QA.Dockerfile  README.md  example.env  pyproject.toml  pytest.ini  qa.docker-compose.yml
benchmarks/: test_help.py
ci/: bump-version.sh  next-version.sh  rec-demo.sh  rec-progress.sh  tag-version.sh
ci/hooks/: post-commit  pre-commit
sandbox/: README.RESMA.md  file-organization-rules.md
scripts/: increase-version.sh  prepare-commit
src/resma/: cli.py  default_config.toml
src/resma/annotate/: cli.py  environment.py
src/resma/annotate/domain/: entities.py  services.py
src/resma/annotate/infrastructure/: configuration.py  editor_gateway.py  file_note_repository.py  note_file_repository.py  note_repository.py  template_file_repository.py  terminal_gateway.py
src/resma/annotate/infrastructure/config/: configuration.py  environment.py
src/resma/annotate/interfaces/: controllers.py  dto.py  interactors.py
src/resma/annotate/interfaces/factories/: configuration_factory.py  create_note_factory.py  environment_factory.py  note_controller_factory.py
src/resma/annotate/use_cases/create_note/: controller.py  controllers.py  interactor.py  interactors.py
src/resma/annotate/use_cases/create_template_note/: controllers.py  interactors.py
src/resma/annotate/use_cases/delete_note/: controllers.py  interactors.py
src/resma/annotate/use_cases/edit_note/: controllers.py  interactors.py
src/resma/annotate/use_cases/note/: interactors.py
src/resma/ingest/: cli.py
src/resma/ingest/infrastructure/: configuration.py  ingest_internet_gateway.py
src/resma/ingest/interfaces/: interactors.py
src/resma/ingest/interfaces/factories/: configuration_factory.py  ingest_controller_factory.py  ingest_internet_gateway_factory.py
src/resma/ingest/use_cases/create_reference/: controllers.py
src/resma/shared/: use_cases.py
src/resma/shared/infrastructure/: curl_internet_gateway.py  decorators.py  editor_gateway.py  file_system_cache.py  interactors.py  playwright_internet_gateway.py  template_file_repository.py  toml_configuration.py  workspace_toml_configuration.py
src/resma/shared/interfaces/: dto.py  interactors.py
src/resma/shared/interfaces/factories/: cache_path_factory.py  configuration_path_factory.py
tests/: test_annotate_cli.py  test_cli.py
tests/resma/: test_annotate_cli.py  test_cli.py
