[project]
authors = [
  {name = "Christian Camacho", email = "chris.ca.dev@gmail.com"},
]
dependencies = ["click>=8.2.1", "click-aliases>=1.0.5"]
description = "Range Signal Meta Amplifier"
license = {text = "MIT"}
name = "RESMA"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0-gamma.2025062319"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project.scripts]
resma = "resma.cli:main"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.16.1",
    "black>=25.1.0",
    "coverage>=7.9.1",
]
lint = [
  "flake8>=7.3.0",
  "black>=25.1.0",
]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
]
ci = [
    "toml-cli>=0.7.0",
]
