[project]
authors = [
  {name = "Christian Camacho", email = "chris.ca.dev@gmail.com"},
]
dependencies = ["click>=8.2.1", "click-aliases>=1.0.5", "python-dotenv>=1.1.1", "toml>=0.10.2"]
description = "Range Signal Meta Amplifier"
license = {text = "MIT"}
name = "RESMA"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.0+gamma.20250625181210"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project.scripts]
resma = "resma.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
cov.composite = ["coverage run -m pytest", "coverage html"]
scov.composite = ["python -m http.server 18000 --directory htmlcov"]
test.composite = ["pytest tests/ "]
bump-version = "./ci/bump-version.sh"
tag-version = "./ci/tag-version.sh"
vb.composite = ["bump-version"]
vt.composite = ["tag-version"]
bench.composite = ["pytest benchmarks/ --benchmark-only"]

[dependency-groups]
ci = [
  "toml-cli>=0.7.0",
]
dev = [
  "pytest>=8.4.1",
  "mypy>=1.16.1",
  "black>=25.1.0",
  "coverage>=7.9.1",
]
lint = [
  "flake8>=7.3.0",
  "black>=25.1.0",
]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
]
stress = [
    "pytest-benchmark>=5.1.0",
    "pytest>=8.4.1",
]
