[project]
authors = [
  {name = "Christian Camacho", email = "chris.ca.dev@gmail.com"},
]
dependencies = ["click>=8.2.1", "click-aliases>=1.0.5", "python-dotenv>=1.1.1", "toml>=0.10.2", "python-dateutil>=2.9.0.post0"]
description = "Range Signal Meta Amplifier"
license = {text = "MIT"}
name = "RESMA"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0+gamma.20250627092205"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project.scripts]
resma = "resma.cli:main"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
bench.composite = ["pytest benchmarks/ --benchmark-only"]
commit.composite = ["version-bump local gamma", "git add pyproject.toml", "git commit"]
cov.composite = ["coverage run -m pytest tests/", "coverage html"]
covs.composite = ["python -m http.server 18000 --directory htmlcov"]
prog-rec.composite = ["bash ./ci/rec-progress.sh"]
rec.composite = ['bash ./ci/rec-demo.sh']
resma = "resma"
test.composite = ["pytest tests/ "]
version-bump = "./ci/bump-version.sh"
version-tag = "./ci/tag-version.sh"

[dependency-groups]
ci = [
  "toml-cli>=0.7.0",
]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.16.1",
    "black>=25.1.0",
    "coverage>=7.9.1",
]
lint = [
  "flake8>=7.3.0",
  "black>=25.1.0",
]
stress = [
  "pytest-benchmark>=5.1.0",
  "pytest>=8.4.1",
]
test = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
]
